# TongueTwisters

./: .gitignore  CMakeLists.txt  databases.qrc  qml.qrc  qtquickcontrols2.conf  resources.qrc
dbase/: tongueTwisters.db
includes/: imodel.hpp  modelbreathing.hpp  modelclassics.hpp  modelpoems.hpp  modeltonguetwisters.hpp  modelvoice.hpp  readdata.hpp
lib/: CMakeLists.txt
lib/DBManager/: CMakeLists.txt
lib/DBManager/includes/: connectmanager.hpp  dbtype.hpp  executor.hpp  manipulator.hpp  processor.hpp  selector.hpp
lib/DBManager/srcs/: connectmanager.cpp  executor.cpp  manipulator.cpp  processor.cpp  selector.cpp
qml/: main.qml  qml.qrc
qml/ModuleHeader/: HeaderCustom.qml  qmldir
qml/ModuleTwisters/: qmldir
qml/ModuleTwisters/BreathingExercisesPage/: BreathingExercisesImpl.qml  qmldir
qml/ModuleTwisters/ClassicsPage/: ClassicsImpl.qml  qmldir
qml/ModuleTwisters/MainPage/: MainPageImpl.qml  qmldir
qml/ModuleTwisters/PoemsPage/: PoemsImpl.qml  qmldir
qml/ModuleTwisters/Tile/: TileImpl.qml  qmldir
qml/ModuleTwisters/VoicePage/: VoiceImpl.qml  qmldir
qml/ModuleTwisters/WrapperText/: WrapperTextImpl.qml  qmldir
qml/StyleConfig/: Style.qml  qmldir
srcs/: imodel.cpp  main.cpp  modelbreathing.cpp  modelclassics.cpp  modelclassics.cpp.pCvzOs  modelpoems.cpp  modeltonguetwisters.cpp  modelvoice.cpp  readdata.cpp
tests/: CMakeLists.txt
tests/test_dbmanager/: CMakeLists.txt
tests/test_dbmanager/includes/: testdbmanager.hpp
tests/test_dbmanager/srcs/: testdbmanager.cpp
tests/test_modeltonguetwisters/: CMakeLists.txt
tests/test_modeltonguetwisters/.cache/clangd/index/: tst_model.cpp.B8EC5FE9AF826301.idx  tst_model.hpp.10E1B875EC1D674C.idx
tests/test_modeltonguetwisters/includes/: tst_model.hpp
tests/test_modeltonguetwisters/srcs/: tst_model.cpp
